# poc-python-auto-update-launcher

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  update.py
.server/: docker-compose.yml
.server/web_root/1.0.0/: checksums.txt
key/: private_key.pem
